DesignProject/tests/error/test02.src
// Error Test 2: Semantic error - type mismatch in assignment
func testTypeMismatch() -> void {
    local x : integer;
    local y : float;
    
    x := 10;
    y := 5.5;
    x := y;  // Type mismatch: cannot assign float to integer
    write(x);
}

